# bachelor-doa

./: 01_check_channels.py  05_estimate_doa.py  07_map_channels_from_tap.py  calib_030cm.json  calib_050cm.json  calib_080cm.json  calib_181cm.json  calib_30cm.json  mic_check.py  pyproject.toml  ref_results_2026-04-09.csv  results_160cm_new.txt  tdoa_windowed_fast.py
audio/: chirp_120deg_take2._notgoodwav
configs/: Setup_front_DIR.json  Setup_front_NEW.json  Setup_front_NEW4.json  setup_front.json
configs/calib_distance/: calib_100cm.json  calib_120cm.json  calib_150cm.json  calib_181cm_far.json
plots/: results_1m_stricter_summary.txt  results_2m_bp_summary.txt
plots/150cm/: file_level_summary.csv
plots_ref_2026-04-09/: summary_best_per_angle.csv
results/: channel_mapping_03.02.txt  ml_windows_calib_03.03.csv  ml_windows_calib_all_04.03.csv  ml_windows_calib_all_04.03_r4-10.csv  ml_windows_calib_all_150cm_2026-03-04.csv  ml_windows_raw_all_04.03.csv  ml_windows_raw_all_150cm_2026-03-04.csv  results_03.03.csv
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
thesislog/: Thesis Log Updated 2026-04-06-2.docx  thesis_log_2026-04-09_pairwise_update.md  thesis_log_2026-04-09_ref_block.md  thesis_log_updated.md  thesis_log_updated_2026-03-03.md  thesis_log_updated_2026-03-03_v2.md  thesis_log_updated_2026-03-04.md  thesis_log_updated_2026-03-09.md  thesis_log_updated_2026-04-01.md
tools/: export_ml_dataset.py  make_doa_plots.py  make_doa_test_signal.py  make_hornsound_broad.py  make_ref_plots.py  make_tdoa_probe.py  make_test_chirp.py  plot_doa_accuracy.py
(+26 files in other folders)
